# energy-knowledge-graph

./: .gitignore  LICENSE.md  README.md  process_data.py  pyproject.toml  requirements.tensorflow.txt  requirements.txt  setup.py
configs/: model_config.py  pipeline_config.py
knowledge-graph/: r2rml_mapping.ttl
linking/: generate_links.py  linking_to_wikidata.ipynb
linking/LIMES/: schema_city.xml  schema_country.xml
linking_configs/: schema_city.xml
notebooks/: EDA.ipynb  datasets.ipynb  visualizations.ipynb
notebooks/knowledge-graph/: preprocess_rdf.ipynb
notebooks/metadata/: device_metadata.ipynb  location_data.ipynb
notebooks/multi-label classification/: analysis.ipynb  class_balance.ipynb  models.ipynb  remove_devices.ipynb
notebooks/parsers/: DRED_parser.ipynb  NILM_parser.ipynb  SMART_HOME_parser.ipynb  experiment.ipynb
scripts/: HES_Parser.ipynb  README.md  SMART_Parser.ipynb  add_predicted_devices.py  database-reset.py  database_reset.py  energy_averages.py  eval.py  generate_consumption_data.py  generate_metadata.py  generate_training_data.py  hue.ipynb  label_datasets.py  loadprofiles.py  location_data.ipynb  meta_data.ipynb  model_config.py  pipeline_config.py  process_data.py  run_parsers.py  train.py  weather_data.ipynb
src/: NUK.py  README.md  add_predicted_devices.py  api.py  config.py  database_reset.py  enrich_data.py  eval.py  generate_consumption_data.py  generate_metadata.py  generate_synthetic.py  generate_training_data.py  helper.py  label_datasets.py  loadprofiles.py  preprocessing.py  remove_devices.py  run_parsers.py  train.py
(+94 files in other folders)
